--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,26 +17,40 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: npm install
       - run:
-          name: Run tests
-          command: npm test
+          name: Install dependencies
+          command: npm install
 
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package-lock.json" }}
 
+      - run:
+          name: Run tests
+          command: npm test
+
       - persist_to_workspace:
           root: ~/repo
           paths: .
+
+  tag:
+    <<: *defaults
+    steps:
+      - run:
+          name: Tag version
+          command: npm version patch -m "[skip ci] Release patch version v%s"
+      - run:
+          name: Push tag to repo
+          command: git push
+
   deploy:
     <<: *defaults
     steps:
       - attach_workspace:
           at: ~/repo
       - run:
-          name: Authenticate with registry
+          name: Authenticate with NPM registry
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
       - run:
           name: Publish package
@@ -46,15 +60,16 @@ workflows:
   version: 2
   test-deploy:
     jobs:
-      - test:
-          filters:
-            tags:
-              only: /^v.*/
-      - deploy:
+      - test
+      - tag:
           requires:
             - test
           filters:
-            tags:
-              only: /^v.*/
             branches:
-              ignore: /.*/
+              only: master
+      - deploy:
+          requires:
+            - tag
+          filters:
+            branches:
+              only: master
