--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
           command: git config user.name `git show -s --format='%an' HEAD`
       - run:
           name: Add Github as a trusted host
-          command: ssh-keyscan github.com >> ~/.ssh/known_hosts
+          command: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
 
       - run:
           name: Tag version
