--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           command: mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
       - add_ssh_keys:
           fingerprints:
-            - "05:27:68:2f:7f:04:80:4f:a5:20:31:d6:05:40:28:99"
+            - $SSH_KEY_FINGERPRINT
 
       - run:
           name: Tag version
